# SuperNOVA

./: .gitmodules  GEMINI.md  build-native.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/aidl/org/courville/supernova/: IAdditionalService.aidl
app/src/main/cpp/: CMakeLists.txt  speech-ladspa-onnx.cpp
app/src/main/java/org/courville/supernova/: NovaAiService.kt
app/src/main/java/org/courville/supernova/ai/: SpeechSeparator.java
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
